# Ethereum-wallet

./: README.md  eth_wallets.py
eth-wallet/: .gitignore  CHANGELOG.md  LICENSE  README.md  Xrp_test.py  eth_wallets.py  release-conf.yaml  setup.cfg  setup.py  wallets.db
eth-wallet/eth_wallet/: api.py  configuration.py  contract.py  exceptions.py  infura.py  transaction.py  utils.py  wallet.py
eth-wallet/eth_wallet/cli/: add_token.py  eth_wallet_cli.py  get_balance.py  get_wallet.py  list_tokens.py  network.py  new_wallet.py  restore_wallet.py  reveal_seed.py  send_transaction.py  utils_cli.py
eth-wallet/eth_wallet/erc20/: abi.json
eth-wallet/eth_wallet/ui/: gui.py  page.py
eth-wallet/tests/: cli_tester.py  conftest.py
eth-wallet/tests/integration/: test_add_token.py  test_cli.py  test_get_balance.py  test_get_wallet.py  test_transactions.py
eth-wallet/tests/unit/: test_account.py  test_api.py  test_utils.py
eth-кошелек/: .gitignore
